<resources>
    <string name="app_name">MoviZ</string>
    <string name="movie_name">Nom du film</string>
    <string name="date">01/01/2001 09:45</string>
    <string name="location">Lieu</string>
    <string name="movie_image">Movie image</string>
    <string name="add_event">Ajouter un évènement</string>
    <string name="hint_title_movie">Nom du film</string>
    <string name="event_date">Date de l\'évènement non définie</string>
    <string name="hint_location">Lieu de l\'évènement</string>
    <string name="description">Description</string>

</resources>