<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/event_movie_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:contentDescription="@string/movie_image"
        android:src="@drawable/ic_baseline_local_movies_24">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/movie_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location" />

    </LinearLayout>
</LinearLayout>